--- a/软考学习笔记.md
+++ b/软考学习笔记.md
@@ -1478,3 +1478,47 @@ java中的使用
 这题不要钻牛角尖，选相对最对的哪一个
 
 ![image-20250401212344022](assets/image-20250401212344022.png)
+
+### 4.交互图
+
+![image-20250407205945274](assets/image-20250407205945274.png)
+
+#### 4.1、序列图（顺序图）
+
+**多个对象与一个用例的行为**
+
+![image-20250407210007352](assets/image-20250407210007352.png)
+
+![image-20250407210038284](assets/image-20250407210038284.png)
+
+![image-20250407210631724](assets/image-20250407210631724.png)
+
+真题1（可以看看）
+
+![image-20250407211635302](assets/image-20250407211635302.png)
+
+真题2
+
+![image-20250407212013434](assets/image-20250407212013434.png)
+
+真题3
+
+![image-20250407212455026](assets/image-20250407212455026.png)
+
+#### 4.2、通信图（协作图）
+
+通信图展示了对象之间的消息流及其顺序
+
+![image-20250407213514788](assets/image-20250407213514788.png)
+
+![image-20250407213526957](assets/image-20250407213526957.png)
+
+![image-20250407213537619](assets/image-20250407213537619.png)
+
+真题1
+
+![image-20250407214352665](assets/image-20250407214352665.png)
+
+真题2
+
+![image-20250407215341248](assets/image-20250407215341248.png)
