--- a/软考学习笔记2.md
+++ b/软考学习笔记2.md
@@ -562,6 +562,60 @@ e空和f空一样
 
 ## 第三章.程序设计语言与语言处理程序基础
 
+要点：
+
+1.编译与解释的区别，都要记住，看csdn那一篇
+
+2.程序语言的基本控制结构：顺序，选择和重复
+
+3.传值和传地址的区别，可能考函数计算，常考
+
+![image-20250512205806515](assets/image-20250512205806515.png)
+
+如题
+
+![image-20250512210636065](assets/image-20250512210636065.png)
+
+4.编译、解释与翻译阶段 
+
+5.编译过程：记住csdn那个图就行，还算好记，就词法，语法，语义这些的特点，以及语义里面的动态语义
+
+6.正规式与正规集：不好辨认的时候举反例
+
+7.**有限自动机**：必须停留在终态，终态就是两个圆圈的节点，转移后状态唯一就是DFA确定的有限自动机；转移后的状态是不确定的，也就是可选的，就是不确定的自动机NFA
+
+![image-20250512230734049](assets/image-20250512230734049.png)
+
+![image-20250512232527691](assets/image-20250512232527691.png)
+
+8.上下文无关文法：**推导出来的式子一定只剩终结符**，一般小写字母或者数字是终结符号，不能往后推导，如何判断是否为终结符，无法向后推到了就是终结符，如下面题目里面的N推导出的这些数字，计算都是和栈有关，先进后出，后进先出
+
+![image-20250513204858919](assets/image-20250513204858919.png) 
+
+![image-20250513210232086](assets/image-20250513210232086.png)
+
+9. 中后缀表达式，也就是数据结构的中序和后序遍历，如果转为后缀式就是从右往左计算，转为中缀式就从左往右，
+
+   要考虑运算顺序，括号最大，其次逻辑与，其次大于小于，其次逻辑或，一定注意顺序，
+
+   ![image-20250513212224211](assets/image-20250513212224211.png)
+
+![image-20250513213145052](assets/image-20250513213145052.png)
+
+![image-20250513213444179](assets/image-20250513213444179.png)
+
+![image-20250513213617725](assets/image-20250513213617725.png)
+
+10.中后缀考察画图
+
+![image-20250513213938102](assets/image-20250513213938102.png)
+
+![image-20250513214243600](assets/image-20250513214243600.png)
+
+![image-20250513214417660](assets/image-20250513214417660.png)
+
+![image-20250513214638767](assets/image-20250513214638767.png)
+
 ### 程序设计语言概述
 
 #### 1.编译程序与解释程序
