--- a/软考学习笔记2.md
+++ b/软考学习笔记2.md
@@ -5289,6 +5289,22 @@ int main() {
 
 总结
 
+![image-20250521235120725](assets/image-20250521235120725.png)
+
+![image-20250521235558538](assets/image-20250521235558538.png)
+
+![image-20250521235622132](assets/image-20250521235622132.png)
+
+![image-20250521235631138](assets/image-20250521235631138.png)
+
+![image-20250521235638776](assets/image-20250521235638776.png)
+
+![image-20250521235651093](assets/image-20250521235651093.png)
+
+![image-20250521235712225](assets/image-20250521235712225.png)
+
+
+
 1.工厂模式和抽象工厂模式区别：只创造一个产品是工厂模式，创造多个产品是抽象工厂模式
 
 
